# numpy_practice

./: README.md  pyproject.toml
numpy_practice/: common.py
numpy_practice/1_basic/: basic.py
numpy_practice/2_plotting_figures/: plotting_figures.py
