[tool.poetry]
name = "numpy-practice"
version = "0.1.0"
description = ""
authors = ["BTozier <benjitenji@gmail.com>"]
readme = "README.md"
packages = [{include = "numpy_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3"
plotly = "^5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
